PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.0alpha1

- CURL:
  . Fixed bug #76480 (Use curl_multi_wait() so that timeouts are respected).
    (Pierrick)

- Intl:
  . Lifted requirements to ICU ≥ 50.1. (cmb)
  . Changed default of $variant parameter of idn_to_ascii() and idn_to_utf8().
    (cmb)

- PDO_SQLite:
  . Implemented sqlite_stmt_readonly in PDO_SQLite. (BohwaZ)

- SQLite3:
  . Updated to SQLite 3.25.1. (cmb)

- Standard:
  . Fixed bug #74764 (Bindto IPv6 works with file_get_contents but fails with 
    stream_socket_client). (Ville Hukkamäki)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>